--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,11 @@ body {
 .logo {
   color: #ffffff;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 2rem;
   padding: 1rem 2rem;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 30px;
+  left: 120px;
 }
 
 .hero-content {
@@ -46,24 +46,24 @@ body {
   margin: 60px 0 0 60px;
   text-align: left;
   padding: 2rem 2rem 2rem 4rem;
-  color: #ffffff;
+  color: #c4f0ff;
   margin-top: 60px;
 }
 
 .hero-content h1 {
-  font-size: 3rem;
+  font-size: 4rem;
   margin-bottom: 1rem;
   font-weight: 600;
 }
 
 .hero-content .highlight {
-  color: #c4f0ff; /* Light blue tone like in the design */
+  color: #ffffff; /* Light blue tone like in the design */
   font-style: italic;
 }
 
 .subtitle {
   font-size: 1.1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   color: #f0f0f0;
 }
 
@@ -71,7 +71,7 @@ body {
 .btn-primary {
   background-color: #FDC600;
   color: #000;
-  padding: 0.9rem 2rem;
+  padding: 1.2rem 4rem;
   text-decoration: none;
   font-weight: bold;
   border-radius: 5px;
